# mkdocs-bootswatch

./: .gitignore  .travis.yml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini
.github/workflows/: deploy-release.yml  test.yml
docs/: examples.md  index.md
docs/sub-dir/: sub-page.md
docs/sub-dir/sub-dir-2/: sub-page-2.md
examples/: index.html
mkdocs/: search_index.json
mkdocs_bootswatch/amelia/: base.html  main.html  mkdocs_theme.yml
mkdocs_bootswatch/amelia/css/: base.css  highlight.css
mkdocs_bootswatch/amelia/js/: base.js
mkdocs_bootswatch/cerulean/: base.html  main.html  mkdocs_theme.yml  nav.html
mkdocs_bootswatch/cosmo/: main.html  mkdocs_theme.yml
mkdocs_bootswatch/cyborg/: base.html  main.html  mkdocs_theme.yml  nav.html
mkdocs_bootswatch/darkly/: mkdocs_theme.yml
mkdocs_bootswatch/flatly/: main.html  mkdocs_theme.yml  toc.html
mkdocs_bootswatch/journal/: main.html  mkdocs_theme.yml
mkdocs_bootswatch/litera/: mkdocs_theme.yml
mkdocs_bootswatch/lumen/: mkdocs_theme.yml
mkdocs_bootswatch/lux/: mkdocs_theme.yml
mkdocs_bootswatch/materia/: mkdocs_theme.yml
mkdocs_bootswatch/minty/: mkdocs_theme.yml
mkdocs_bootswatch/pulse/: mkdocs_theme.yml
mkdocs_bootswatch/readable/: main.html  mkdocs_theme.yml
mkdocs_bootswatch/sandstone/: mkdocs_theme.yml
mkdocs_bootswatch/simplex/: main.html  mkdocs_theme.yml  nav.html
mkdocs_bootswatch/slate/: main.html  mkdocs_theme.yml
mkdocs_bootswatch/solar/: mkdocs_theme.yml
mkdocs_bootswatch/spacelab/: main.html  mkdocs_theme.yml  nav.html
mkdocs_bootswatch/superhero/: mkdocs_theme.yml
mkdocs_bootswatch/united/: main.html  mkdocs_theme.yml
mkdocs_bootswatch/yeti/: main.html  mkdocs_theme.yml
search/: search_index.json
src/_base/: base.html  toc.html
sub-dir/sub-page/: index.html
(+41 files in other folders)
