[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = 'mkdocs-bootswatch'
dynamic = ['version']
description = "Bootswatch themes for MkDocs"
readme = {file = 'README.md', content-type='text/markdown'}
authors = [
    {name = 'Dougal Matthews', email = 'dougal@dougalmatthews.com'}
]
maintainers = [
    {name = 'Waylan Limberg', email = 'waylan.limberg@icloud.com'}
]
license = {file = 'LICENSE'}
requires-python = '>=3.5'
dependencies = [
    'mkdocs>=1.1'
]

[project.urls]
'Homepage' = 'http://mkdocs.github.io/mkdocs-bootswatch/'
'Repository' = 'https://github.com/mkdocs/mkdocs-bootswatch'
'Issue Tracker' = 'https://github.com/mkdocs/mkdocs-bootswatch/issues'

[project.entry-points.'mkdocs.themes']
cerulean = 'mkdocs_bootswatch.cerulean'
cosmo = 'mkdocs_bootswatch.cosmo'
cyborg = 'mkdocs_bootswatch.cyborg'
darkly = 'mkdocs_bootswatch.darkly'
flatly = 'mkdocs_bootswatch.flatly'
journal = 'mkdocs_bootswatch.journal'
litera = 'mkdocs_bootswatch.litera'
lumen = 'mkdocs_bootswatch.lumen'
lux = 'mkdocs_bootswatch.lux'
materia = 'mkdocs_bootswatch.materia'
minty = 'mkdocs_bootswatch.minty'
pulse = 'mkdocs_bootswatch.pulse'
sandstone = 'mkdocs_bootswatch.sandstone'
simplex = 'mkdocs_bootswatch.simplex'
slate = 'mkdocs_bootswatch.slate'
solar = 'mkdocs_bootswatch.solar'
spacelab = 'mkdocs_bootswatch.spacelab'
superhero = 'mkdocs_bootswatch.superhero'
united = 'mkdocs_bootswatch.united'
yeti = 'mkdocs_bootswatch.yeti'

[tool.setuptools]
license-files = ['LICENSE', 'bootswatch.LICENSE']

[tool.setuptools.package-data]
"*" = ['*.css', '*.yml']

[tool.setuptools.dynamic]
version = {attr = 'mkdocs_bootswatch.__version__'}
